syntax = "proto3";

package admin.pb;

message Log {

  // 日志类型
  enum LogType {
    CREATE = 0; // 创建群
    NAME = 1; // 设置群名
    AVATAR = 2; // 设置群头像
    NOTICE = 3; // 设置群公告
    AUTO_JOIN_GROUP = 4; // 设置入群免审核
    MEMBER = 5; // 群成员操作
    DISBAND = 6; // 解散群
  }

  // 群成员具体操作
  enum MemberOperate {
    NONE = 0; // 无操作
    APPLY = 1; // 申请
    AGREE = 2; // 同意
    REJECTED = 3; // 拒绝
    REMOVE = 4; // 移除
    EXIT = 5; // 退出
  }

  message Member {
    bytes id = 1;
    string name = 2;
    string avatar = 3;
  }

  // 日志ID
  string id = 1;

  // 群组ID
  string groupId = 2;

  // 操作人
  bytes peerId = 3;

  // 日志类型
  LogType logType = 4;

  // 成员ID
  Member member = 5;

  // 成员操作
  MemberOperate memberOperate = 6;

  // 附带内容
  bytes payload = 7;

  // 时间戳
  int64 createTime = 8;

  // lamport时间戳
  uint64 lamportime = 9;

  // 签名
  bytes signature = 10;
}
